--- a/client/templates/views/content.pug
+++ b/client/templates/views/content.pug
@@ -58,5 +58,6 @@ html(lang="en")
       
       van-tabbar(v-model="active" @change="ourHref")
           van-tabbar-item(icon="comment-o") 填写信息
-          van-tabbar-item(icon="todo-list-o") 我的订单
+          van-tabbar-item(icon="todo-list-o") 我的工单
+          van-tabbar-item(icon="manager-o") 用户中心
       
