--- a/client/templates/views/index.pug
+++ b/client/templates/views/index.pug
@@ -22,7 +22,7 @@ html(lang="en")
           van-field(v-model="username" name="user" label="用户名" placeholder="用户名" :rules="[{ required: true, message: '请填写用户名' }]")
           van-field(v-model="password" type="password" name="pass" label="密码" placeholder="密码" :rules="[{ required: true, message: '请填写密码' }]")
           div(style="margin: 100px 0;")
-            van-button(round block type="info" native-type="submit") 提交
+            van-button(round block type="info" native-type="submit" :loading="handling ? true : false") 提交
             //- .free_view_circular
             //- .free_circular
     
