--- a/wxclient/templates/views/index.pug
+++ b/wxclient/templates/views/index.pug
@@ -14,12 +14,12 @@ html(lang="en")
     .container#app
       //- van-overlay(:show="show")
       //-   van-loading(size="24px") 加载中...
-      
       van-skeleton(title :row="20" :loading="show")
         .span 工单详情
         van-cell-group
-        each item in [{name: '服务类型', value: '安装'},{name: '需求名称', value: '正常上门'},{name: '故障描述', value: '新设备安装 1.咖啡之翼V双头意式半自动咖啡机 V022003101'},{name: '门店名称', value: '湖南咖啡之翼品牌管理股份有限公司'}]
-          van-cell(title=item.name value=item.value)
+          van-cell(v-for="item in workList" :title="item.name" :value="item.value")
+            template(#right-icon v-if="item.name == '机器铭牌图片' || item.name == '机器整体图片' || item.name == '故障部分图'")
+              van-icon(name="search" style="line-height: inherit;" @click="preview(item.value)")
         .submit
           van-button(round block type="info" native-type="submit" :loading="handling ? true : false") 提交
     
