--- a/wxclient/templates/stylesheets/style.scss
+++ b/wxclient/templates/stylesheets/style.scss
@@ -3,7 +3,7 @@ html{
     margin: 0;
     padding: 0;
     width: $width;
-    height: $width;
+    // height: $width;
     background-color: #f0f0ee;
 }
 body{
@@ -13,7 +13,7 @@ body{
     margin: 0 auto;
     font-size: 14px;
     background-color: #fff;
-    height: $width;
+    // height: $width;
     position: relative;
     input{
         font-size: 14px;
@@ -44,8 +44,19 @@ body{
     }
     .submit{
         position: fixed;
-        bottom: 20px;
-        left: 5%;
-        width: $width - 10%;
+        bottom: 0;
+        left: 0;
+        width: $width;
+        background-color: white;
+        padding: 10px;
+        box-sizing: border-box;
+        box-shadow: 0 0 10px rgba(0,0,0, 0.22);
+        button{
+            margin: 0 auto;
+            width: $width - 10%;
+        }
+    }
+    .van-cell-group{
+        margin-bottom: 64px;
     }
 }
