--- a/client/templates/stylesheets/style.css
+++ b/client/templates/stylesheets/style.css
@@ -26,6 +26,15 @@ body input {
   height: 100%;
 }
 
+.container .van-loading {
+  text-align: center;
+  margin-top: 200px;
+}
+
+.container .van-loading .van-loading__text {
+  color: white;
+}
+
 .container .free_view_circular .free_circular {
   width: 100%;
   height: 203px;
