--- a/src/views/order.html
+++ b/src/views/order.html
@@ -95,14 +95,14 @@
                             <template slot-scope="scope">
                                 {{
                                     scope.row.status == 1 || scope.row.status == 18 ?
-                                    '待沟通'
+                                    '已提交/已确认/已支付定金/待沟通'
                                     : scope.row.status == 2 ? 
-                                    '已沟通/待派单' 
+                                    '已联络/待派单' 
                                     : scope.row.status == 3 ? 
                                     '已派单/维修中'
                                     : scope.row.status == 4 ? 
-                                    '已完成'
-                                    : '进行中'
+                                    '已完成/已回访'
+                                    : '已取消'
                                 }}
                             </template>
                         </el-table-column>
