--- a/client/templates/views/order.pug
+++ b/client/templates/views/order.pug
@@ -11,10 +11,10 @@ html(lang="en")
     title 咖速修
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.8/lib/index.css")
   body
-    .module
-      .router 努力加载中...
-    .container
-      #app
+    .container#app
+      van-overlay(:show="loadingShow")
+        van-loading(size="24px") 加载中...
+      van-skeleton(title :row="20" :loading="show")
         van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
           van-swipe-item
               img(:src="image")
@@ -23,7 +23,7 @@ html(lang="en")
             van-tab(title=item.name)
               van-pull-refresh(v-model="refreshing" @refresh="onRefresh")
                 van-list(v-model="loading" :finished="finished" finished-text="没有更多了" @load="onLoad()")
-                  van-cell(v-for="item in list" :key="item")
+                  van-cell(v-for="item in list" :key="item" @click="page(item.workId)")
                     van-card(:desc="item.contact" :title="item.workId" :num="item.createTime")
                       template(#tags)
                           van-tag(plain type="danger") {{ item.status == 4 ? '已完成' : item.status == 19 ? '已取消': '进行中'}}
