--- a/client/templates/stylesheets/style.css
+++ b/client/templates/stylesheets/style.css
@@ -21,6 +21,11 @@ body input {
   font-size: 14px;
 }
 
+body h3, body p {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   display: none;
   position: relative;
@@ -210,4 +215,8 @@ body input {
   text-align: center;
   color: white;
   transform: translateY(200px);
+}
+
+.btn {
+  margin-top: 30px;
 }
