--- a/src/views/order.html
+++ b/src/views/order.html
@@ -69,9 +69,9 @@
                             </template>
                         </el-table-column>
                         <el-table-column prop="repairsTypeName" label="保修类型"></el-table-column>
-                        <el-table-column prop="creationType" label="创建类型">
+                        <el-table-column prop="createName" label="创建者">
                             <template slot-scope="scope">
-                                {{ scope.row.creationType == 1 ? '手动提交(管理端)': scope.row.creationType == 2 ? '个人用户提交(小程序)': '企业用户提交(公众号)' }}
+                                {{ scope.row.createName == -1 ? '个人用户提交(小程序)' : scope.row.createName }}
                             </template>
                         </el-table-column>
                         <el-table-column prop="shopName" label="门店名称"></el-table-column>
@@ -305,7 +305,7 @@
 
 
                         <div class="btn-center" style="text-align: center; margin: 20px;">
-                            <el-button v-show="formData.status == 1" type="primary" @click="contactorder(formData)">
+                            <el-button type="primary" @click="contactorder(formData)">
                                 工单沟通
                             </el-button>
                             <el-button v-show="formData.status == 2" type="primary" @click="goorder(formData)">工单派单
@@ -435,13 +435,24 @@
                 <el-dialog title="工单沟通" :visible.sync="adoptModule" :before-close="handleClose">
                     <el-form :model="DataVisible" label-width="180px">
                         <el-form-item label="工单号" prop="workId">
-                            <el-input v-model="DataVisible.workId"></el-input>
+                            <el-input v-model="DataVisible.workId" disabled="disabled"></el-input>
+                        </el-form-item>
+                        <el-form-item label="沟通内容" prop="contactContent">
+                            <el-input type="textarea" v-model="DataVisible.contactContent"></el-input>
                         </el-form-item>
                         <el-form-item label="机器设备名(选填)" prop="facilityName">
                             <el-input v-model="DataVisible.facilityName"></el-input>
                         </el-form-item>
-                        <el-form-item label="沟通内容" prop="contactContent">
-                            <el-input type="textarea" v-model="DataVisible.contactContent"></el-input>
+                        <el-form-item label="更改报修类型(选填)" prop="repairsTypeId" v-if="DataVisible.status < 2">
+                            <div style="font-size: 10px; color: #ccc;">*请先填写沟通内容</div>
+                            <el-select v-model="DataVisible.repairsTypeId" placeholder="请选择">
+                                <el-option
+                                  v-for="(item, index) in DataVisible.options"
+                                  :key="index"
+                                  :label="item.repairsTypeName"
+                                  :value="item.repairsTypeId">
+                                </el-option>
+                              </el-select>
                         </el-form-item>
                         <div class="btn-center" style="text-align: center; margin: 20px;">
                             <el-button type="primary" @click="contactorder(DataVisible)">确认
