--- a/client/templates/views/order.pug
+++ b/client/templates/views/order.pug
@@ -10,23 +10,30 @@ html(lang="en")
   head
     title 咖速修
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.8/lib/index.css")
+    style.
+      .van-card{
+        border-bottom: 2px solid #ebebeb;
+      }
   body
     .container#app
       van-overlay(:show="loadingShow")
         van-loading(size="24px") 加载中...
       van-skeleton(title :row="20" :loading="show")
-        van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
-          van-swipe-item
-            img(:src="image")
-        van-tabs(v-model="tag" @click="num = 1; onLoad()")
+        //- van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
+        //-   van-swipe-item
+        //-     img(:src="image")
+        van-search(v-model="search" placeholder="请输入搜索关键词" input-align="center" @input="num = 1;list = []; onLoad()")
+        van-tabs(v-model="tag" @click="num = 1;list = []; onLoad()")
           each item in [{name:'全部', id: 0},{name: "进行中", id: 1},{name: "已完成", id: 2},{name: "已取消", id: 3}]
             van-tab(title=item.name)
-              van-pull-refresh(v-model="refreshing" @refresh="onRefresh")
-                van-list(v-model="loading" :finished="finished" finished-text="没有更多了" @load="onLoad()")
-                  van-cell(v-for="item in list" :key="item" @click="page(item.workId)")
-                    van-card(:desc="item.contact" :title="item.workId" :num="item.createTime")
-                      template(#tags)
-                          van-tag(plain type="danger") {{ item.status == 4 ? '已完成' : item.status == 19 ? '已取消': '进行中'}}
+              div(:style="secrHeight")
+                van-pull-refresh(v-model="refreshing" @refresh="onRefresh")
+                  van-list(v-model="loading" :finished="finished" finished-text="没有更多了" @load="onLoad()")
+                    van-cell(v-for="item in list" :key="item" @click="page(item.workId)")
+                      van-card(:desc="item.contact" :title="item.workId" :num="item.createTime" thumb="../images/order.png")
+                        template(#tags)
+                            div(style="display: block;") 门店名称：{{ item.shopName }}
+                            van-tag(plain type="danger") {{ item.status == 4 ? '已完成' : item.status == 19 ? '已取消': '进行中'}}
         van-tabbar(v-model="active" @change="ourHref")
           van-tabbar-item(icon="comment-o") 填写信息
           van-tabbar-item(icon="todo-list-o") 我的工单
