--- a/src/views/order.html
+++ b/src/views/order.html
@@ -46,6 +46,13 @@
                             <el-option label="已取消" value="3"></el-option>
                         </el-select>
                     </div>
+                    <div class="_search_centent" v-show="more">
+                        <el-button>报修类型</el-button>
+                        <el-select v-model="listSearch.repairsTypeId" slot="prepend" placeholder="请选择">
+                            <el-option v-for="(repairsTypeId, index) in listSearch.repairsTypeIds" :key="index" :label="repairsTypeId.repairsTypeName" :value="repairsTypeId.repairsTypeId"></el-option>
+                        </el-select>
+                    </div>
+
                     <div class="more_search el-icon-circle-plus-outline" v-show="!more" @click="more = !more">
                         更多搜索条件
                     </div>
@@ -68,7 +75,7 @@
                                 {{ scope.row.facilityName == -1 ? '无' : scope.row.facilityName }}
                             </template>
                         </el-table-column>
-                        <el-table-column prop="repairsTypeName" label="保修类型"></el-table-column>
+                        <el-table-column prop="repairsTypeName" label="售后类型"></el-table-column>
                         <el-table-column prop="createName" label="创建者">
                             <template slot-scope="scope">
                                 {{ scope.row.createName == -1 ? '个人用户提交(小程序)' : scope.row.createName }}
@@ -305,17 +312,17 @@
 
 
                         <div class="btn-center" style="text-align: center; margin: 20px;">
-                            <el-button type="primary" @click="contactorder(formData)">
-                                工单沟通
+                            <el-button type="primary" v-if="formData.status != 19" @click="contactorder(formData)">
+                                {{ formData.status > 1 ? "填写日志": "工单沟通" }}
                             </el-button>
                             <el-button v-show="formData.status == 2" type="primary" @click="goorder(formData)">工单派单
                             </el-button>
-                            <el-button v-show="formData.status == 3" type="primary" @click="denorder(formData)">完成工单
+                            <el-button v-show="formData.status > 1 && formData.status != 4 && formData.status != 19" type="primary" @click="denorder(formData)">完成工单
                             </el-button>
                             <el-button v-show="formData.status != 4 && formData.status != 19" type="primary"
                                 @click="celorder(formData)">取消工单
                             </el-button>
-                            <el-button v-show="formData.orderCount > 0" type="primary"
+                            <el-button style="margin-top: 10px;" v-show="formData.orderCount > 0" type="primary"
                                 @click="option = []; order(formData)"> 查看订单
                             </el-button>
                         </div>
