--- a/client/templates/stylesheets/style.css
+++ b/client/templates/stylesheets/style.css
@@ -126,8 +126,42 @@ body h3, body p {
   height: 30px;
 }
 
-.center ul > li:nth-of-type(1) {
-  border-bottom: 1px solid #ccc;
+.center {
+  height: auto;
+  background: white;
+  overflow: hidden;
+}
+
+.center ul > .title_name {
+  font-size: 14px;
+  color: #333333;
+  padding: 10px;
+  box-sizing: border-box;
+  font-weight: bold;
+}
+
+.center ul > .title_name::before {
+  content: "";
+  display: block;
+  background-color: red;
+  width: 4px;
+  height: 20px;
+  float: left;
+  margin-right: 6px;
+  border-radius: 20px;
+}
+
+.center ul > .project_add {
+  height: 45px;
+  width: 100%;
+  border: 1px dashed #CCCCCC;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.center ul > .project_add .van-icon-add-o {
+  display: block;
+  line-height: 20px;
 }
 
 .center ul > li {
@@ -135,7 +169,7 @@ body h3, body p {
 }
 
 .center ul > li .van-field {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ececec;
   padding: 10px 0;
   box-sizing: border-box;
 }
@@ -178,6 +212,7 @@ body h3, body p {
   box-sizing: border-box;
   background: #FAFAFA;
   box-shadow: 0px 0px 10px 0px rgba(12, 4, 7, 0.1);
+  border-color: #cccccc;
   border-radius: 8px;
   height: 95px;
   margin-top: 10px;
@@ -219,4 +254,22 @@ body h3, body p {
 
 .btn {
   margin-top: 30px;
+}
+
+.video_file_tag {
+  display: inline-block !important;
+  transform: translateY(-50px);
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.hr {
+  height: 10px;
+  width: 120%;
+  background-color: #F0F0F0;
+  transform: translateX(-20px);
+}
+
+.cell_border {
+  border-top: 10px solid #F0F0F0;
 }
