--- a/client/templates/stylesheets/style.scss
+++ b/client/templates/stylesheets/style.scss
@@ -129,12 +129,43 @@ body{
     }
 }
 .center{
+    height: auto;
+    background: white;
+    overflow: hidden;
     ul>li:nth-of-type(1){
-        border-bottom: 1px solid #ccc;
+        // border-bottom: 1px solid #ccc;
+    }
+    ul>.title_name{
+        font-size: 14px;
+        color: #333333;
+        padding: 10px;
+        box-sizing: border-box;
+        font-weight: bold;
+    }
+    ul>.title_name::before{
+        content: "";
+        display: block;
+        background-color: red;
+        width: 4px;
+        height: 20px;
+        float: left;
+        margin-right: 6px;
+        border-radius: 20px;
+    }
+    ul>.project_add{
+        height: 45px;
+        @include width;
+        border:1px dashed #CCCCCC;
+        border-radius:4px;
+        text-align: center;
+        .van-icon-add-o{
+            display: block;
+            line-height: 20px;
+        }
     }
     ul>li{
         .van-field{
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid #ececec;
             padding: 10px 0;
             box-sizing:  border-box;
         }
@@ -171,6 +202,7 @@ body{
             box-sizing: border-box;
             background:#FAFAFA;
             box-shadow:0px 0px 10px 0px rgba(12,4,7,0.1);
+            border-color: rgba(204,204,204,1);
             border-radius:8px;
             height: 95px;
             margin-top: 10px;
@@ -211,4 +243,19 @@ body{
 }
 .btn{
     margin-top: 30px;
+}
+.video_file_tag{
+    display: inline-block !important;
+    transform: translateY(-50px);
+    margin-left: 10px;
+    cursor: pointer;
+}
+.hr{
+    height: 10px;
+    width: 120%;
+    background-color: #F0F0F0;
+    transform: translateX(-20px);
+}
+.cell_border{
+    border-top: 10px solid #F0F0F0
 }
