--- a/client/templates/views/details.pug
+++ b/client/templates/views/details.pug
@@ -17,11 +17,57 @@ html(lang="en")
       van-skeleton(title :row="20" :loading="show")
         van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false)
           van-swipe-item
-              img(:src="image")
+              img(:src="detailsImages" style="width: 100%;")
         van-cell-group
-          van-cell(v-for="item in workList" :title="item.name" :value="item.value")
-            template(#right-icon v-if="item.name == '机器铭牌图片' || item.name == '机器整体图片' || item.name == '故障部分图'")
-              van-icon(name="photo-o" style="line-height: inherit;" @click="preview(item.view)")
-          van-button(round type="info" class="btn" @click="href") 查看日志
+          van-cell(class="cell_border" title="工单号" :value="workList.workId")
+
+          van-cell(class="cell_border")
+            template(#title)
+              div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
+              span(class="custom-title" style="font-weight: blod;") 需求信息
+          van-cell(title="需求名称" :value="workList.demandChargeName")
+          van-cell(title="报修类型名称" :value="workList.repairsTypeName")
+          van-cell(title="产品名称" :value="workList.products")
+          van-cell(title="故障描述" :value="workList.faultContent")
+          van-cell
+            template(#title)
+              span(class="custom-title" style="font-weight: blod;") 视频附件
+              video(:src="workList.video" controls="controls" width="100" height="100" style="display: block;")
+
+          van-cell(class="cell_border")
+            template(#title)
+              div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
+              span(class="custom-title" style="font-weight: blod;") 门店信息
+          van-cell(title="门店名称" :value="workList.shopName")
+
+          van-cell(class="cell_border")
+            template(#title)
+              div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
+              span(class="custom-title" style="font-weight: blod;") 联系人信息
+          van-cell(title="联系人名称" :value="workList.contactName")
+          van-cell(title="联系人电话" :value="workList.contactPhone")
+          
+          van-cell(class="cell_border")
+            template(#title)
+              div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
+              span(class="custom-title" style="font-weight: blod;") 师傅信息
+          van-cell(title="维修师傅" :value="workList.maintainerName")
+          van-cell(title="维修师傅电话" :value="workList.maintainerPhone")
+          
+          van-cell(class="cell_border")
+            template(#title)
+              div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
+              span(class="custom-title" style="font-weight: blod;") 订单信息
+          van-cell(title="创建时间" :value="workList.createTime")
+          van-cell(title="创建类型" :value="workList.creationType")
+          van-cell(title="微信昵称" :value="workList.nickName")
+          van-cell(title="维修金额" :value="workList.maintainPaymentStr")
+          van-cell(title="设备名称" :value="workList.machineName")
+          van-cell(title="预支付费用" :value="workList.visitCostStr")
+          van-cell(title="配件费用" :value="workList.partPaymentStr")
+          van-cell(title="状态" :value="workList.status")
+          div(style="width: 100%;margin-bottom: 20px;height: auto;overflow: hidden;")
+            van-button(round type="info" class="btn" @click="href('order')" style="width: 40%; float: left;") 返回上一页
+            van-button(round type="info" class="btn" @click="href('logs')" style="width: 40%; float: left;") 查看日志
           
           
