--- a/client/templates/views/index.pug
+++ b/client/templates/views/index.pug
@@ -16,7 +16,7 @@ html(lang="en")
         van-swipe(class="my-swipe" :autoplay="3000" indicator-color="white" :show-indicators=false )
             van-swipe-item
                 img(:src="image")
-        van-form(@submit="onSubmit")
+        van-form(@submit="onSubmit({account: username,password: password})")
           van-field(v-model="username" name="user" label="用户名" placeholder="用户名" :rules="[{ required: true, message: '请填写用户名' }]")
           van-field(v-model="password" type="password" name="pass" label="密码" placeholder="密码" :rules="[{ required: true, message: '请填写密码' }]")
           div(style="margin: 100px 0;")
