--- a/wxclient/templates/views/index.pug
+++ b/wxclient/templates/views/index.pug
@@ -76,7 +76,8 @@ html(lang="en")
           van-cell(title="配件费用" :value="workList.partPaymentStr")
           van-cell(title="期待上门时间" :value="workList.visitingTime")
           van-cell(title="状态" :value="workList.status")
-          div(style="padding: 10px 16px;box-sizing: border-box;") 工单日志：
+          div(style="padding: 10px 16px;box-sizing: border-box;")
+            span(class="logs") 工单日志：
             van-steps(direction="vertical" :active="0")
               van-step(v-for="(item, index) in workList.logs" v:key="index")
                 h3 {{ (item.logType == 1 ? "确认登记：": item.logType == 1 ? "确认登记：": item.logType == 2 ? "联络登记：": item.logType == 3 ? "派单登记：": item.logType == 4 ? "回访登记：": item.logType == 5 ? "继续联络：": item.logType == 17 ? "编辑登记：": item.logType == 18 ? "提交登记：": "取消登记：") + item.createName }}
