--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,10 +33,9 @@
             <el-menu class="el-menu-demo" mode="horizontal" style="position:absolute;top:0;right:0;">
                 <el-submenu index="1">
                     <template slot="title"><i class="el-icon-user"></i>{{ adminName }}</template>
-                    <el-menu-item index="1-1" @click="screenView()"><i class="el-icon-rank"></i>{{ screenViews }}
-                    </el-menu-item>
-                    <el-menu-item index="1-4" @click="serchAdmin();"><i
-                            class="el-icon-connection"></i>个人信息</el-menu-item>
+                    <el-menu-item index="1-1" @click="screenView()"><i class="el-icon-rank"></i>{{ screenViews }}</el-menu-item>
+                    <el-menu-item index="1-3" @click="serchAdmin();"><i class="el-icon-connection"></i>个人信息</el-menu-item>
+                    <el-menu-item index="1-4" @click="updataSession"><i class="el-icon-help"></i>清除缓存</el-menu-item>
                     <el-menu-item index="1-5">
                         <el-link style="text-decoration:none;" href="../../login.htm?hash:goback(-hash*)"><i
                                 class="el-icon-switch-button"></i>退出登陆</el-link>
